tests/baselines/reference/project/jsFileCompilationDifferentNamesSpecifiedWithAllowJs/amd/jsFileCompilationDifferentNamesSpecifiedWithAllowJs.errors.txt
lib.es5.d.ts(48,21): error TS6054: File 'lib.es2009.uint16array' has an unsupported extension. The only supported extensions are '.ts', '.tsx', '.d.ts', '.js', '.jsx', '.cts', '.d.cts', '.cjs', '.mts', '.d.mts', '.mjs'.


==== DifferentNamesSpecifiedWithAllowJs/tsconfig.json (0 errors) ====
    {
      "compilerOptions": {
        "out": "test.js",
        "allowJs": true
      },
      "files": [ "a.ts", "b.js" ]
    }
==== DifferentNamesSpecifiedWithAllowJs/a.ts (0 errors) ====
    var test = 10;
==== DifferentNamesSpecifiedWithAllowJs/b.js (0 errors) ====
    var test2 = 10; // Should get compiled